brought in prior app

--- a/oncolims-bff/ClientApp/public/manifest.json
+++ b/oncolims-bff/ClientApp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "oncolims_bff",
-  "name": "oncolims_bff",
+  "short_name": "dotnet_react",
+  "name": "dotnet_react",
   "icons": [
     {
       "src": "favicon.ico",
