--- a/oncolims-bff/ClientApp/package.json
+++ b/oncolims-bff/ClientApp/package.json
@@ -1,41 +1,68 @@
 {
-  "name": "oncolims_bff",
-  "version": "0.1.0",
-  "private": true,
+  "scripts": {
+    "start": "rimraf ./build && craco start",
+    "build": "craco build",
+    "test": "cross-env CI=true craco test --env=jsdom",
+    "eject": "craco eject",
+    "lint": "eslint ./src/"
+  },
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "jquery": "^3.5.1",
+    "@craco/craco": "^6.1.2",
+    "@headlessui/react": "^1.2.0",
+    "@heroicons/react": "^1.0.1",
+    "@hookform/resolvers": "^2.5.2",
+    "@snowpack/plugin-typescript": "^1.2.1",
+    "@tailwindcss/forms": "^0.3.3",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
+    "@types/voca": "^1.4.0",
+    "classnames": "^2.3.1",
+    "dayjs": "^1.10.5",
+    "lodash": "^4.17.21",
     "merge": "^1.2.1",
-    "oidc-client": "^1.9.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.4",
-    "reactstrap": "^8.4.1",
-    "rimraf": "^2.6.2"
+    "oidc-client": "^1.11.5",
+    "query-string": "^7.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.8.3",
+    "react-location": "^3.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
+    "rimraf": "^2.6.2",
+    "typescript": "^4.3.2",
+    "voca": "^1.4.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "ajv": "^6.9.1",
+    "@hookform/devtools": "^3.0.2",
+    "@snowpack/plugin-dotenv": "^2.1.0",
+    "@snowpack/plugin-postcss": "^1.4.1",
+    "@snowpack/plugin-react-refresh": "^2.5.0",
+    "@snowpack/web-test-runner-plugin": "^0.2.2",
+    "@testing-library/react": "^11.2.6",
+    "@types/react-router": "^5.1.15",
+    "@types/react-router-dom": "^5.1.7",
+    "@web/test-runner": "^0.13.3",
+    "ajv": "^6.12.6",
+    "autoprefixer": "^9.8.6",
+    "axios": "^0.21.1",
+    "chai": "^4.3.4",
     "cross-env": "^5.2.0",
-    "typescript": "^3.7.5",
-    "eslint": "^6.8.0",
-    "eslint-config-react-app": "^5.2.0",
-    "eslint-plugin-flowtype": "^4.6.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3",
-    "nan": "^2.14.1"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "scripts": {
-    "start": "rimraf ./build && react-scripts start",
-    "build": "react-scripts build",
-    "test": "cross-env CI=true react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint ./src/"
+    "eslint": "^7.28.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "^4.7.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "nan": "^2.14.2",
+    "postcss": "^7.0.36",
+    "prettier": "^2.2.1",
+    "react-query": "^3.16.1",
+    "snowpack": "^3.3.7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4",
+    "use-query-params": "^1.2.2"
   },
   "browserslist": {
     "production": [
