startup and nuget config

--- a/oncolims-bff/oncolims-bff.csproj
+++ b/oncolims-bff/oncolims-bff.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.6" />
+    <PackageReference Include="Duende.BFF" Version="1.0.0-rc.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.6" />
   </ItemGroup>
 
   <ItemGroup>
@@ -46,5 +48,4 @@
       </ResolvedFileToPublish>
     </ItemGroup>
   </Target>
-
 </Project>
