--- a/oncolims-bff/ClientApp/package.json
+++ b/oncolims-bff/ClientApp/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.3",
     "react-location": "^3.0.0",
+    "react-nice-avatar": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "rimraf": "^2.6.2",
